# baiit-onnx

./: README.md  pyproject.toml  requirements.txt
src/commands/: load_actions.py  predict_all.py  process_images.py
