[tool.poetry]
name = "Bulk_AI_Image_Tool"
version = "0.1.0"
description = "This tool allows you to bulk tag images"
authors = ["vaedrenn"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
numpy = "^1.26.4"
pillow = "^10.2.0"
pyqt5 = "^5.15.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
